<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">EV卫士</string>
    <string name="exit">退出</string>
    <string name="confirm_exit">确定退出EV卫士吗</string>
    <string name="confirm_exit_to_login">确定注销登录吗</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="login_fail">登录失败</string>
    <string name="altering">修改信息</string>
    <string name="client_service_tel">客服电话：0591-83057556</string>
    <string name="user_guide">功能介绍</string>
    <string name="copyright_ch">福建星海通信科技有限公司 版权所有</string>
    <string name="copyright_en">Copyright@2015 Mobile ALL</string>
    <string name="guide_content">     该客户端是面向福建移动和康护行用户推出的手机应用程序,以满足家长用户通过手环终端实现孩子的定位监控、位置跟踪、轨迹回放和远程监听等功能。业务详情请咨询10086</string>
    <string name="ok">确定</string>
    <string name="set">设  置</string>
    <string name="cancel">取消</string>
    <string name="login_timeout">用户未登录，或登录超时！</string>
    <string name="exception_checking_and_retrying">加载失败！\n请检查您的网络和设置，点击重试</string>
    <string name="higher_district_region">返回上一级</string>
    <string name="locating">定位</string>
    <string name="serverAddressSet_statistic_event">ServerAddressSet</string>
    <string name="testAccount_statistic_event">TestAccount</string>
    <string name="testAccount_statistic_label">TestAccount</string>
    <string name="login_empty_note">&quot;用户名或密码为空，请重新输入！&quot;</string>
    <string name="login_error_note">用户名或密码错误，请重新输入！</string>
    <string name="download_car_data">&quot;正在下载车辆，请稍后...&quot;</string>
    <string name="login_statistic_event">Login</string>
    <string name="login_success_format">成功-%1$s</string>
    <string name="login_failed_format">失败-%1$s</string>
    <string name="fwqpz">服务器设置</string>
    <string name="gycws">关于康护行</string>
    <string name="user_order_register">UserOrderRegister</string>
    <string name="setting_statistic_event">Setting</string>
    <string name="forget_password_statistic_event">ForgetPassword</string>
    <string name="password_resetting_failed_format">%1$s---%2$s</string>
    <string name="password_resetting_success_format">1$s---成功</string>
    <string name="login_loginname_hint">请输入手机号码</string>
    <string name="login_loginpwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_userregister">用户注册</string>
    <string name="goback">返回</string>
    <string name="register_username_hint">请输入姓名</string>
    <string name="register_telephone_hint">请输入手机号码</string>
    <string name="register_place_hint">请选择所在城市</string>
    <string name="register">注册</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记了密码?</string>
    <string name="register_loading">正在加载，请稍候...</string>
    <string name="endtime">结束时间</string>
    <string name="starttime">开始时间</string>
    <string name="exitlogin">退出登录</string>
    <string name="dearname">昵称</string>
    <string name="birthday">生日</string>
    <string name="download_tracks_title">轨迹下载</string>
    <string name="download_tracks">"正在下载孩子轨迹，请稍侯..."</string>
    <string name="download_note">正在下载<xliff:g id="format">%1$s</xliff:g>的轨迹数据,请稍候...&quot;</string>
    <string name="fencenametip">请输入名称(如：家、补习班)</string>
    <string name="fencetimetip">选择日期</string>
    <string name="ac_fenceadd_locating">正在定位，请稍候...</string>
    <string name="ac_fenceadd_regeocode">正在解析位置，请稍候...</string>
    <string name="dg_fencetimeselect_title">请选择围栏有效时间</string>
    <string name="kidinfo">宝贝信息</string>
    <string name="messagesound">消息声音</string>
    <string name="messageverb">消息震动</string>
    <string name="advice">意见反馈</string>
    <string name="aboutus">关于我们</string>
    <string name="serverset">服务器设置</string>
    <string name="dg_updatekidhead">修改头像</string>
    <string name="tip_loadingkids">正在努力为您加载孩子信息，请稍候...</string>
    <string name="tip_nokidselected">请先选择您要查看的孩子</string>
    <string name="tip_nocar">没有孩子信息！</string>
    <string name="fenceradius">围栏半径:</string>
    <string name="fencename">围栏名称:</string>
    <string name="fencetime">有效日期:</string>
    <string name="tip_relogin">提示</string>
    <string name="tip_reloginmessage">登录超时，请重新登录!</string>
    <string name="logintimeoutcode">00000000</string>
    <string name="webresnulll">执行返回值无效</string>
    <string name="reloginnull">用户登录异常,执行返回值无效</string>
    <string name="reloginfalied">用户登录异常,登录失败</string>
    <string name="webexception">与服务器连接中断，请检查网络！</string>
    <string name="str_turn_back">取消</string>
    <string name="str_forward">前进</string>
    <string name="websockettimeout">请求超时！</string>
    <string name="webunknownerror">未知错误！</string>
    <string name="app_version">EV卫士 1.0</string>
</resources>